@@ -5881,8 +5881,8 @@ package body Sem_Ch13 is
 
       else
          --  In a generic context the aspect expressions have not been
-         --  preanalyzed, so do it now.
-         --  There are no conformance checks to perform in this case.
+         --  preanalyzed, so do it now. There are no conformance checks
+         --  to perform in this case.
 
          if No (T) then
             Check_Aspect_At_Freeze_Point (ASN);
